# sso-authentication-with-sidecar-containers

./: .gitignore  Makefile  README.MD  go.work  go.work.sum  with_authorization.sh  with_unauthorized.sh
auth-proxy/: Makefile  dockerfile  go.mod  go.sum  main.go
bff/mobile-bff/: Makefile  go.mod  go.sum  main.go
bff/mobile-bff/k8s/: deployment.yaml  service.yaml
bff/web-bff/: Cargo.toml  Dockerfile  Makefile
bff/web-bff/k8s/: deployment.yaml  service.yaml
bff/web-bff/src/: main.rs
k8s/: ingress.yaml  service.yaml
keycloak/: .env  docker-compose.yml  realm.json
services/: docker-compose.yml  package.json
services/apps/album/: Dockerfile  package.json
services/apps/album/k8s/: deployment.yaml  service.yaml
services/apps/album/src/: index.ts
services/apps/comment/: Dockerfile  package.json
services/apps/comment/k8s/: deployment.yaml  service.yaml
services/apps/comment/src/: index.ts
services/apps/photo/: Dockerfile  package.json
services/apps/photo/k8s/: deployment.yaml  service.yaml
services/apps/photo/src/: index.ts
services/apps/post/: Dockerfile  package.json
services/apps/post/k8s/: deployment.yaml  service.yaml
services/apps/post/src/: index.ts
services/apps/todo/: Dockerfile  package.json
services/apps/todo/k8s/: deployment.yaml  service.yaml
services/apps/todo/src/: index.ts
services/apps/user/: Dockerfile  package.json
services/apps/user/k8s/: deployment.yaml  service.yaml
services/apps/user/src/: index.ts
